--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countdown to August 15, 2024</title>
   
-  <link rel="stylesheet" href="CountdownTimer.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
   <div id="countdown">
-  <h1>Coming soon.. </h1>
-  <h4>on August 15, 2024</h4>
+    <div id="myheanding">
+      <p style="font-size:40px;">C O M I N G &nbsp;&nbsp;&nbsp;S O O N . . . </p>
+      <p class="myp">on August 15, 2024</p>
+    </div>
 
     <div id="day-box" class="countdown-item">
       <div class="countdown-number" id="days">00</div>
@@ -30,6 +33,6 @@
     </div>
   </div>
 
-  <script src="CountdownTimer.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
